# StrikeEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp  README.md  premake5.lua
Combat/: Combat.h  Combatant.h  Strike.h
Core/: Game.cpp  Game.h  Input.h  RenderableComponent.cpp  RenderableComponent.h  RenderableGenerator.cpp  RenderableGenerator.h  Scene.cpp  Scene.h  Time.h
Core/Debugging/: Log.cpp  Log.h  Logger.cpp  Logger.h  StrikeDebug.h
Core/EventsAndInput/: EventState.cpp  EventState.h  Input.cpp  Input.h  KeyButtonCode.h  KeyMap.cpp  KeyMap.h  StateMap.cpp  StateMap.h  WindowEventCode.h
Core/Input/: KeyButtonCode.h  KeyMap.h
Core/Rendering/: Colour.cpp  Colour.h  GLRenderer.cpp  GLRenderer.h  RenderableComponent.cpp  RenderableComponent.h  RenderableGenerator.cpp  RenderableGenerator.h  Renderer.cpp  Renderer.h  StrikeTexture.h
Core/Utils/: Time.cpp  Time.h
Dependencies/GLP/: Buffer.cpp  Buffer.h  GLDebug.h  Program.cpp  Program.h  Texture.cpp  Texture.h  VertexLayout.cpp  VertexLayout.h
Dependencies/Logger/: Logger.cpp
Interface/: CombatInterface.h  MainMenuInterface.h  ResultsInterface.h
Rendering/: Renderer.h  Scene.cpp  Scene.h
RenderingEngine/: Renderer.h  Scene.h
src/Core/: Game.cpp  Game.h  StrikePCH.cpp  StrikePCH.h  Window.cpp  Window.h
src/Core/Debugging/: BreakPoint.h  Log.cpp  Log.h  Logger.cpp  Logger.h  ProfileTimer.h  StrikeDebug.h
src/Core/EventsAndInput/: Event.h  EventState.h  KeyButtonCode.h  MouseButtonCode.h  WindowEventCode.h
src/Core/Rendering/: Buffer.h  Colour.cpp  Colour.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  RendererResourceStore.cpp  RendererResourceStore.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TextureAtlas.h  TextureParams.h  Vertex.cpp  Vertex.h
src/Core/Resource/: ResourceData.cpp  ResourceData.h  ResourceHandle.cpp  ResourceHandle.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h
src/Core/Scene/: Camera.cpp  Camera.h  Object.cpp  Object.h  Scene.cpp  Scene.h
src/Core/Scene/Component/: Bounds.cpp  Bounds.h  Camera.cpp  Camera.h  Component.h  CoreObjectData.h  RenderableComponent.cpp  RenderableComponent.h  RenderableMesh.cpp  RenderableMesh.h  SpriteRenderer.cpp  SpriteRenderer.h  (+1 more)
src/Core/Utils/: FileLoader.cpp  FileLoader.h  Math.cpp  Math.h  Matrix.h  Random.cpp  Random.h  Time.cpp  Time.h  Transform.cpp  Transform.h  TransformMaths.cpp  TransformMaths.h  Vector.h
